Added pictures to the events detail page Formatted the html to fit the design of the rest of the website, such as adding pictures, changing the colour of the font, the text family, banner heading format

--- a/css/company.css
+++ b/css/company.css
@@ -157,7 +157,6 @@
 	}
 
 	#event-detail{
-		text-transform: uppercase;
 		margin-top: 1em;
 		display: inline-block;
 	}
@@ -173,6 +172,10 @@
 		margin:0;
 		padding:0;
 		text-decoration: none;
+	}
+
+	.address{
+		display:inline;
 	}
 
 	#map{
