--- a/css/company.css
+++ b/css/company.css
@@ -136,7 +136,8 @@
 	.small-header{
 		font-family: PT Sans;
 		font-size: 0.75rem;
-  		margin: 1rem;
+  		margin-top: 1rem;
+  		margin-bottom: 1.5rem;
   		text-transform: uppercase;
   		letter-spacing: 3px;
   		text-align: center;
@@ -150,15 +151,20 @@
   		width: 80%;
   		display: block;
   		margin: auto;
+  		max-width: 50%;
+  		margin-top: 1rem;
 	}
-
+	
 	#form-comment{
-		margin: 1rem 5%;
-		width: 90%;
-		height: 10em;
-
+		margin-bottom: 1.5rem;
 	}
 
+	textarea#form-comment {
+  		min-height: 150px;
+  		max-height: 150px;
+	}
+
+	
 	.nav-button{
 		text-decoration: none;
   		list-style: none;
@@ -176,7 +182,14 @@
   		color: white;
   		transition: 0.3s;
   		color: black;
-  		
+	}
+
+	.nav-button:hover{
+		background-color: #00ADEF;
+		border:none;
+		color:white;
+		transition:0.3s;
+
 	}
 
 /*	a:hover {
