--- a/css/grid.css
+++ b/css/grid.css
@@ -27,6 +27,12 @@
 	margin-bottom: 0;
 }
 
+.grid-col-half {
+	width: 100%;
+	margin-top: 2rem;
+	margin-bottom: 0;
+}
+
 .grid-col-three p {
 	/*width: 90%;*/
 }
