--- a/css/company.css
+++ b/css/company.css
@@ -108,10 +108,6 @@
   		font-size:0.75rem;
 	}
 
-<<<<<<< HEAD
-	#staff-intro{
-		padding: 0.5rem 17%;
-=======
 		.staff-text {
 		font-family: PT Sans;
 		font-size: 0.8rem;
@@ -127,7 +123,6 @@
 	.staff-description{
 		color: #00AEDF;
 	}
->>>>>>> pictures
 
 	#staff-intro{
 		width: 100%;		
@@ -186,7 +181,7 @@
 		display: inline-block;
 		width:100%;
 		position: relative;
-		font-size:1rem;
+		font-size:0.8rem;
 
 	}
 
@@ -206,13 +201,14 @@
 
 	.event-description p, .event-picture p {
 	font-family: PT Sans;
-	  font-size: 1rem;
-	  margin: 0 0;
+	  font-size: 0.8rem;
+	  margin: 1em 0;
 	  /*padding: 0.25rem 10%;*/
 	  padding-left: 0;
 	  /* margin-left: 2em; */
 	  text-align: left;
 	  width: 100%;
+	  letter-spacing: 0.05em;
 	  line-height: 1.5em;
 	}
 
@@ -245,53 +241,61 @@ width: 70%;
 		text-align: center;
 		display: block;
 		position:relative;
-		margin-top: 1.5rem;
-	}
-
-	.event-details p{
-		font-size: 1rem;
 	}
 
 	.event-details p, .event-details a {
 		text-align:center;
 		padding:0;
-		margin: 0;
 	}
 
 	.fan-expo-pics{
-		margin-top: 2em;
-		padding: 0 5%
+  margin-top: 2em;
+  width: 100%;
+  height: auto;
+  position: relative;
+  display: inline-block;
 	}
 
 .fan-expo{
   display: inline-block;
-  width: 33.3333%;
+  width: 32%;
+  margin-bottom: 2em;
   /* height: 10em; */
-  float: left;
+vertical-align: top;
   text-align: center;
 }
 
-.fan-expo-first img {
+.fan-expo:hover{
+	opacity: 0.5;
+	transition:0.5s;
+}
+
+.fan-expo .events-label {
+	width:95%;
+	margin:1em 5%;
+}
+
+.fan-expo-first img, .fan-expo-mid img, .fan-expo-last img {
 	width:90%;
-	margin-right:10%;
+	margin:auto 10%;
 	height:auto;
 }
 
 .fan-expo-mid img {
-	width:90%;
+/*	width:90%;
 	margin-right:5%;
 	margin-left:5%;
 		height:auto;
-	-webkit-backface-visibility: hidden;	
+	-webkit-backface-visibility: hidden;	*/
 }
 
 
 .fan-expo-last img {
-	width:90%;
+/*	width:90%;
 	margin-right:10%;
 	float:right;
 	margin-right:0;
-	height:auto;
+	height:auto;*/
 }
 
 	p a {
@@ -340,8 +344,7 @@ width: 70%;
 	.small-header{
 		font-family: PT Sans;
 		font-size: 0.75rem;
-  		margin-top: 1rem;
-  		margin-bottom: 1.5rem;
+  		margin: 1rem;
   		text-transform: uppercase;
   		letter-spacing: 3px;
   		text-align: center;
@@ -355,20 +358,15 @@ width: 70%;
   		width: 80%;
   		display: block;
   		margin: auto;
-  		max-width: 50%;
-  		margin-top: 1rem;
 	}
-	
+
 	#form-comment{
-		margin-bottom: 1.5rem;
+		margin: 1rem 5%;
+		width: 90%;
+		height: 10em;
+
 	}
 
-	textarea#form-comment {
-  		min-height: 150px;
-  		max-height: 150px;
-	}
-
-	
 	.nav-button{
 		text-decoration: none;
   		list-style: none;
@@ -386,14 +384,7 @@ width: 70%;
   		color: white;
   		transition: 0.3s;
   		color: black;
-	}
-
-	.nav-button:hover{
-		background-color: #00ADEF;
-		border:none;
-		color:white;
-		transition:0.3s;
-
+  		
 	}
 
 /*Responsive*/
@@ -405,9 +396,6 @@ width: 70%;
 	width:auto;
 	right:0;
 }
-.event-picture{
-	width:100%;
-}
 
 .banner{
 	position: relative;
@@ -417,6 +405,10 @@ width: 70%;
 .banner-header {
 	width:80%;
 	margin:auto 10%;
+}
+
+.fan-expo{
+	width:47%;
 }
 }
 
@@ -439,9 +431,9 @@ width: 70%;
 	margin:auto 10%;
 	top:15%;
 }
-
-.event-picture{
-	width:100%;
+.fan-expo{
+	width:90%;
 }
+
 	}
 
