added box-sizing to fix the glitch of the email submit button in the footer to be smaller on some pages than others

--- a/css/main.css
+++ b/css/main.css
@@ -316,6 +316,7 @@ input:focus {
   transition:0.5s;
   color:black;
   display: inline-block;
+  box-sizing: content-box;
 }
 
 .email-button:hover{
