Fixed the small glitch that shifted the staff grid when the width of the description got too condensed.

--- a/css/company.css
+++ b/css/company.css
@@ -1,25 +1,17 @@
 /*BANNER FORMAT*/
 
-.banner-title{
+/*.banner-title{
 	font-family: PT Sans;
 	font-size: 2.5rem;
 	font-weight: 700;
 	text-transform: uppercase;
 	letter-spacing: 0.3em;
 	margin:0;
-}
+}*/
 
-.banner-question{
-	font-family: PT Sans;
-	font-size: 1rem;
-	font-weight: 500;
-	text-transform: uppercase;
-	letter-spacing: 0.7em;
-	margin:0;
-	border-top: 1px solid black;
-	padding-top: 0.5em;
-	width: 100%;
-}
+/*.banner-question{
+
+}*/
 
 .banner-header{
 	background-color: rgba(255,255,255,0.7);
@@ -42,17 +34,17 @@
 
 /* ABOUT PAGE*/
 
-		.history-text {
-	  font-family: PT Sans;
-	  font-size: 0.8rem;
-	  margin: 0;
-	  padding: 0.25rem 10%;
+.history-text {
+	font-family: PT Sans;
+	font-size: 0.8rem;
+	margin: 0;
+	padding: 0.25rem 10%;
 
-	  /* margin-left: 2em; */
-	  text-align: left;
-	  width: 100%;
-	  letter-spacing: 0.05em;
-	  line-height: 1.5em;
+	/* margin-left: 2em; */
+	text-align: left;
+	width: 100%;
+	letter-spacing: 0.05em;
+	line-height: 1.5em;
 	}
 
 
@@ -129,6 +121,7 @@
 		text-align: left;
 		margin:auto;
 		padding:1em 10%;
+		min-height: 15em;
 	}
 
 
@@ -391,12 +384,7 @@
 	}
 
 	.small-header{
-		font-family: PT Sans;
-		font-size: 0.75rem;
-  		margin: 1rem;
-  		text-transform: uppercase;
-  		letter-spacing: 3px;
-  		text-align: center;
+	  	text-align: center;
 	}
 
 	.con-comments {
@@ -479,6 +467,10 @@
 	width:80%;
 }
 
+#staff-intro {
+	min-height: 13em;
+}
+
 .con-comments{
 	width:80%;
 }
@@ -507,6 +499,10 @@
 .fan-expo{
 	width:90%;
 }
+
+	#staff-intro {
+		min-height:0;		
+	}
 
 	}
 
