--- a/css/grid.css
+++ b/css/grid.css
@@ -61,13 +61,15 @@
 	.grid-col-three{
 	  width: 85%;
 	  /* min-width: 25em; */
-	  min-height: 30em;
+	  min-height: 0;
 	  margin:2em auto;
 	  float:none;
+
 	}
 	.grid-col-three img {
 		width:90%;
 		height:auto;
+		  max-width: 18em;
 	}
 }
 
