--- a/css/company.css
+++ b/css/company.css
@@ -23,15 +23,6 @@
 	margin: 0px 30%;
 }
 
-.banner img{
-	position: relative;
-}
-
-.banner{
-	position: relative;
-	}
-
-
 /* ABOUT PAGE*/
 
 .history-text {
@@ -323,6 +314,14 @@
 
 	}
 
+.store-info{
+	  width: 60%;
+	  position: relative;
+	  height: auto;
+	  float: left;
+	  display: inline;
+	  margin: auto 20%;
+}
 	.store-picture{
 		width:60%;
 		margin-bottom: 1em;
@@ -348,21 +347,20 @@
 	}
 
 	.store-details{
-		width: 100%;
-		text-align: center;
-		display: block;
-		position:relative;
-		margin-bottom: 2em;
+	  display: inline-block;
+	  position: relative;
+	  margin-bottom: 2em;
+	  float: left;
+	   width: 50%;
 	}
 
 	.store-details p, .store-details a {
-		text-align:center;
 		padding:0;
 		font-family: PT Sans;
 		font-size: 0.8em;
-		margin: 0.25em;
 		text-transform: uppercase;
 		letter-spacing: 0.1em;
+		text-align: center;
 	}
 
 	.store-details a{
@@ -407,6 +405,8 @@
 
 	textarea{
 		height:15em;
+		outline:none;
+		border: 1px solid #E0E0E0;
 	}
 
 	.contact-details{
@@ -475,6 +475,11 @@
 	width:80%;
 }
 
+.store-info{
+	  width: 80%;;
+  margin: auto 10%;
+}
+
 }
 
 @media (max-width: 40em) {
@@ -504,5 +509,8 @@
 		min-height:0;		
 	}
 
-	}
+.store-details{
+	width:100%;
+}
 
+}
