--- a/css/company.css
+++ b/css/company.css
@@ -1,18 +1,4 @@
 /*BANNER FORMAT*/
-
-/*.banner-title{
-	font-family: PT Sans;
-	font-size: 2.5rem;
-	font-weight: 700;
-	text-transform: uppercase;
-	letter-spacing: 0.3em;
-	margin:0;
-}*/
-
-/*.banner-question{
-
-}*/
-
 .banner-header{
 	background-color: rgba(255,255,255,0.7);
 	width: 40%;
@@ -24,97 +10,67 @@
 }
 
 /* ABOUT PAGE*/
-
-.history-text {
-	font-family: PT Sans;
-	font-size: 0.8rem;
-	margin: 0;
-	padding: 0.25rem 10%;
-
-	/* margin-left: 2em; */
-	text-align: left;
-	width: 100%;
-	letter-spacing: 0.05em;
-	line-height: 1.5em;
-	}
-
-
-	.information-header {
-		font-family: PT Sans;
-  		font-size: 1.25rem;
-  		text-transform: uppercase;
-  		letter-spacing: 3px;
-  		margin: 0;
-	}
-
-	h4 h6{
-		font-family: PT Sans;
-	}
-
-	.sub-heading{
-		font-family: PT Sans;
-  		font-size: 1.25rem;
-  		display: block;
-	}
-
 	.about{
 		margin: 2rem;
 		padding-bottom: 4rem;
 		border-bottom: 1px solid #ccc;
 	}
 
-
-	#meet-team{
-		height: 2em;
-  		background-color: #00ADEF;	
-  		padding: 0.5rem;
-  		margin-top: 3rem;
-  		color: white;
-	}
-
-	.picture-place{
-		max-width: 90%;
-	}
-
-	.staff-picture {
-		width:100%;
-	}
-
-	.staff-name{
-		font-size: 1rem;
-		font-weight: 700;
-  		padding-top: 0.5rem;
-  		margin: 0;
-  		letter-spacing: 2px;
-  		text-transform: uppercase;
-  		font-family: PT Sans;
-  		font-size:0.75rem;
-	}
-
-		.staff-text {
+	.history-text {
 		font-family: PT Sans;
 		font-size: 0.8rem;
-		margin:0;
-		padding: 0.25rem 2rem;
-		margin-left: 2em;
+		margin: 0;
+		padding: 0.25rem 10%;
 		text-align: left;
-		width: 95%;
-		letter-spacing:0.05em;
+		width: 100%;
+		letter-spacing: 0.05em;
 		line-height: 1.5em;
 	}
+	/*Meet the team*/
+		.sub-heading{
+			font-family: PT Sans;
+	  		font-size: 1.25rem;
+	  		display: block;
+		}
 
-	.staff-description{
-		color: #00AEDF;
-	}
+		.staff-picture {
+			width:100%;
+		}
 
-	#staff-intro{
-		width: 100%;		
-		text-align: left;
-		margin:auto;
-		padding:1em 10%;
-		min-height: 15em;
-	}
+		.staff-name{
+			font-size: 1rem;
+			font-weight: 700;
+	  		padding-top: 0.5rem;
+	  		margin: 0;
+	  		letter-spacing: 2px;
+	  		text-transform: uppercase;
+	  		font-family: PT Sans;
+	  		font-size:0.75rem;
+		}
 
+		.staff-text {
+			font-family: PT Sans;
+			font-size: 0.8rem;
+			margin:0;
+			padding: 0.25rem 2rem;
+			margin-left: 2em;
+			text-align: left;
+			width: 95%;
+			letter-spacing:0.05em;
+			line-height: 1.5em;
+		}
+
+		.staff-description{
+			color: #00AEDF;
+		}
+
+		#staff-intro{
+			width: 100%;		
+			text-align: left;
+			margin:auto;
+			padding:1em 10%;
+			min-height: 15em;
+		}
 
 /*EVENT PAGE*/
 
@@ -185,7 +141,7 @@
   float: none;
   display: inline-block;
   position: relative;
-  width: 70%;
+  width: 60%;
   /* padding: 1em; */
 	}
 
@@ -203,7 +159,7 @@
 	}
 
 	.event-picture{
-	width: 70%;
+	width: 60%;
   display: inline-block;
   text-align: center;
   position: relative;
@@ -225,17 +181,28 @@
 		margin:0;
 	}
 
-	.event-details{
-		width: 100%;
+.event-details {
+	  display: inline-block;
+	  position: relative;
+	  margin: 2em 0;
+	  float: left;
+	  width: 45%;
+	}
+	.event-details p, .event-details a {
+		padding:0;
+		font-family: PT Sans;
+		font-size: 1.25em;
+		text-transform: uppercase;
+		letter-spacing: 0.1em;
 		text-align: center;
-		display: block;
-		position:relative;
-		margin-top:1.5em;
 	}
 
-	.event-details p, .event-details a {
-		text-align:center;
-		padding:0;
+	.event-details p{
+		font-size: 0.8em;
+	}
+
+	.event-details .bold-color {
+		font-size: 1.25em;
 	}
 
 	.fan-expo-pics{
@@ -511,6 +478,10 @@
 
 .store-details{
 	width:100%;
+}
+
+.event-details{
+	width:100%
 }
 
 }
