--- a/css/company.css
+++ b/css/company.css
@@ -1,4 +1,18 @@
 /*BANNER FORMAT*/
+
+/*.banner-title{
+	font-family: PT Sans;
+	font-size: 2.5rem;
+	font-weight: 700;
+	text-transform: uppercase;
+	letter-spacing: 0.3em;
+	margin:0;
+}*/
+
+/*.banner-question{
+
+}*/
+
 .banner-header{
 	background-color: rgba(255,255,255,0.7);
 	width: 40%;
@@ -10,67 +24,102 @@
 }
 
 /* ABOUT PAGE*/
+
+.history-text {
+	font-family: PT Sans;
+	font-size: 0.8rem;
+	margin: 0;
+	padding: 0.25rem 10%;
+
+	/* margin-left: 2em; */
+	text-align: left;
+	width: 100%;
+	letter-spacing: 0.05em;
+	line-height: 1.5em;
+	}
+
+
+	.information-header {
+		font-family: PT Sans;
+  		font-size: 1.25rem;
+  		text-transform: uppercase;
+  		letter-spacing: 3px;
+  		margin: 0;
+	}
+
+	h4 h6{
+		font-family: PT Sans;
+	}
+
+	.sub-heading{
+		font-family: PT Sans;
+  		font-size: 1.25rem;
+  		display: block;
+	}
+
 	.about{
 		margin: 2rem;
 		padding-bottom: 4rem;
 		border-bottom: 1px solid #ccc;
 	}
 
-	.history-text {
-		font-family: PT Sans;
-		font-size: 0.8rem;
-		margin: 0;
-		padding: 0.25rem 10%;
-		text-align: left;
-		width: 100%;
-		letter-spacing: 0.05em;
-		line-height: 1.5em;
+
+	.meet-the-team{
+		width:90%;
+		margin:1em auto;
 	}
-	/*Meet the team*/
-		.sub-heading{
-			font-family: PT Sans;
-	  		font-size: 1.25rem;
-	  		display: block;
-		}
 
-		.staff-picture {
-			width:100%;
-		}
+	.picture-place{
+		max-width: 90%;
+	}
 
-		.staff-name{
-			font-size: 1rem;
-			font-weight: 700;
-	  		padding-top: 0.5rem;
-	  		margin: 0;
-	  		letter-spacing: 2px;
-	  		text-transform: uppercase;
-	  		font-family: PT Sans;
-	  		font-size:0.75rem;
-		}
+	.staff-picture {
+		width:100%;
+	}
+
+	.staff-name{
+		font-size: 1rem;
+		font-weight: 700;
+  		padding-top: 0.5rem;
+  		margin: 0;
+  		letter-spacing: 2px;
+  		text-transform: uppercase;
+  		font-family: PT Sans;
+  		font-size:1.25rem;
+	}
+
+	.staff-description{
+		color: #00AEDF;
+		font-size: 1rem;
+		font-weight: 700;
+  		margin: 0;
+  		letter-spacing: 2px;
+  		text-transform: uppercase;
+  		font-family: PT Sans;
+  		font-size:0.75rem;
+	}
 
 		.staff-text {
-			font-family: PT Sans;
-			font-size: 0.8rem;
-			margin:0;
-			padding: 0.25rem 2rem;
-			margin-left: 2em;
-			text-align: left;
-			width: 95%;
-			letter-spacing:0.05em;
-			line-height: 1.5em;
-		}
+		font-family: PT Sans;
+		font-size: 0.8rem;
+		margin:0;
+		padding: 0.25rem 2rem;
+		margin-left: 2em;
+		text-align: left;
+		width: 95%;
+		letter-spacing:0.05em;
+		line-height: 1.5em;
 
-		.staff-description{
-			color: #00AEDF;
-		}
+	}
 
-		#staff-intro{
-			width: 100%;		
-			text-align: left;
-			margin:auto;
-			padding:1em 10%;
-			min-height: 15em;
-		}
+	#staff-intro{
+		width: 100%;		
+		text-align: left;
+		margin:auto;
+		padding:1em 10%;
+		min-height: 15em;
+	}
+
 
 /*EVENT PAGE*/
 
@@ -141,7 +190,7 @@
   float: none;
   display: inline-block;
   position: relative;
-  width: 60%;
+  width: 70%;
   /* padding: 1em; */
 	}
 
@@ -159,7 +208,7 @@
 	}
 
 	.event-picture{
-	width: 60%;
+	width: 70%;
   display: inline-block;
   text-align: center;
   position: relative;
@@ -181,28 +230,25 @@
 		margin:0;
 	}
 
-.event-details {
+	/*.event-details{
+		width: 100%;
+		text-align: center;
+		display: block;
+		position:relative;
+		margin-top:1.5em;
+	}*/
+
+	.event-details {
 	  display: inline-block;
 	  position: relative;
-	  margin: 2em 0;
+	  margin-bottom: 2em;
 	  float: left;
-	  width: 45%;
+	  width: 50%;
 	}
+
 	.event-details p, .event-details a {
+		text-align:center;
 		padding:0;
-		font-family: PT Sans;
-		font-size: 1.25em;
-		text-transform: uppercase;
-		letter-spacing: 0.1em;
-		text-align: center;
-	}
-
-	.event-details p{
-		font-size: 0.8em;
-	}
-
-	.event-details .bold-color {
-		font-size: 1.25em;
 	}
 
 	.fan-expo-pics{
@@ -450,6 +496,11 @@
 }
 
 @media (max-width: 40em) {
+
+	header nav {
+		display:none;
+	}
+
 	.banner img{
 	position: absolute;
 	height:100%;
@@ -460,7 +511,7 @@
 .banner{
 	position: relative;
 	height:14em;
-	margin-top:9em;
+	  margin-top: 3em;
 	z-index:0;
 	}
 .banner-header {
@@ -480,8 +531,13 @@
 	width:100%;
 }
 
-.event-details{
-	width:100%
+.event-details {
+	  width: 100%;
 }
+
+.meet-the-team{
+		width:100%;
+		margin:1em auto;
+	}
 
 }
