--- a/css/grid.css
+++ b/css/grid.css
@@ -28,9 +28,14 @@
 }
 
 .grid-col-one {
-	width: 100%;
+	width: 80%;
 	margin-top: 2rem;
 	margin-bottom: 0;
+	margin: 1em 10%;
+}
+.break{
+  border-bottom: 1px solid #ccc;
+  padding-bottom: 2em;
 }
 
 .grid-col-three p {
@@ -112,6 +117,15 @@
 .grid-col-form{
 	width:50%;
 	margin-top:1rem;
+}
+
+.grid {
+	width: 80%;
+	margin: 1em 10%;
+}
+
+.meet-the-team .grid {
+	width
 }
 
 @media (max-width: 50em) {
