--- a/css/product.css
+++ b/css/product.css
@@ -92,7 +92,6 @@
 .bc-home:hover {
 	color: #00ADEF;
 	transition:0.5s;
-	border-bottom: 1px solid #00ADEF;
 	text-decoration: none;
 }
 
@@ -311,6 +310,10 @@ select:focus {
 
 /*------------------VIEW ITEM HTML------------------*/
 
+#category-menu{
+	display: none;
+}
+
 /*VIEW ITEM BREADCRUMBS*/
 .item-breadcrumbs{
 	display: inline;
@@ -345,6 +348,10 @@ select:focus {
 }
 
 /*VIEW ITEM SECTION*/
+.mobile-title{
+	display:none;
+}
+
 .view-item{
   display: block;
   margin-bottom: 3em;
@@ -381,11 +388,11 @@ width: 30%;
   font-weight: 700;
   text-transform: uppercase;
   color: black;
-  font-size: 2rem;
+  font-size: 1.75rem;
   padding-bottom: 0.25em;
   letter-spacing: 5px;
   display: block;
-  margin-top: 0.5em;
+  margin-top: 1.5em;
   margin-bottom: 0;
   width: 100%;
   position: relative;
@@ -524,7 +531,10 @@ font-family: Crimson Text;
 }
 
 .information-header{
-	margin-top: 1em;
+	  width: 100%;
+  position: relative;
+  top: 2em;
+  margin-left: 5%;
 }
 
 .checkout-information{
@@ -607,7 +617,7 @@ select:focus {
 	text-transform: uppercase;
 	letter-spacing: 2px;
 	height: 1rem;
-	padding: 0.30rem;
+  	padding: 0.75rem;
 	color: black; 
 }
 
@@ -622,7 +632,7 @@ select:focus {
 	text-transform: uppercase;
 	letter-spacing: 2px;
 	height: 1rem;
-	padding: 0.30rem;
+	padding: 0.8rem;
 }
 
 #small-detail{
@@ -636,7 +646,7 @@ select:focus {
 	text-transform: uppercase;
 	letter-spacing: 2px;
 	height: 1rem;
-	padding: 0.30rem;
+	padding: 0.8rem;
 }
 
 #half-detail{
@@ -650,7 +660,7 @@ select:focus {
 	text-transform: uppercase;
 	letter-spacing: 2px;
 	height: 1rem;
-	padding: 0.30rem;
+	padding: 0.8rem;
 }
 
 .first-half-detail{
@@ -743,14 +753,13 @@ input {
 
 /*REVIEW SECTION*/
 .review{
-	float: left;
-	/* position: absolute; */
-	/* top: 5em; */
-	width: 45%;
-	/*height: 50em;*/
-	margin-left: 0;
-	display: block;
-	float: left;
+  position: relative;
+  top: 5em;
+  width: 45%;
+  /* height: 50em; */
+  margin-left: 0;
+  display: block;
+  float: right;
 }
 
 .cart-all{
@@ -774,7 +783,7 @@ input {
   /* background-color: yellow; */
   padding: 5%;
   /* border: 1px solid black; */
-  height: 18em;
+  height: 20em;
   box-shadow: 0 3px 5px 0 rgba(0,0,0,0.1);
   background-color: white;
 }
@@ -842,9 +851,6 @@ input {
 	width:100%
 }
 
-#mobile-menu {
-		display:none;
-	}
 
 /*END OF REVIEW SECTION*/
 
@@ -853,6 +859,25 @@ input {
 	.multi-list {
 	width: 68.5%;
 
+	}
+
+		.desktop{
+		display: none;
+	}
+
+	.mobile-title{
+	  display: block;
+	  position: relative;
+	  margin: 2em 23%;
+	  width: 35%;
+	  float: left;
+	  text-align: left;
+	  min-width: 25em;
+	}
+
+
+	.mobile-title h3 {
+		margin-top:0;
 	}
 
 	.item-box {
@@ -878,9 +903,10 @@ input {
 	}
 
 	.item-heading {
-		  width: 65%;
-  /* text-align: center; */
-  padding-left: 18%;
+		width: 55%;
+		/* text-align: center; */
+		/* padding-left: 18%; */
+		margin: 0 22.5%;
 	}
 
 	.item-picture{
@@ -900,23 +926,34 @@ input {
 	.item-description{
 		width:100%;
 	}
+
+	.review {
+		width:100%;	
+	  margin-bottom: 1em;	
+	}
 		.cart{
-		width: 100%;
-		position: absolute;
-		top: 4em;
-		margin: 0 16%;
-		height:auto;
+		width: 80%;
+	  position: absolute;
+	  top: 3em;
+	  margin: 0 10%;
+	  height: auto;
+	  margin-bottom:2	em;
 	}
 
 	.cart-all{
-		  position: absolute;
-  top: 2em;
+		position: relative;
+		top: 2em;
+		width:100%;
 	}
 
 	.information-input{
-		width:90%;
-		top:35em;
-		  margin: 0 11%;
+		width: 90%;
+		top: 0em; 
+		margin: 3em 10%;
+	}
+
+	.information-header{
+		margin-left: 15%
 	}
 }
 
@@ -924,17 +961,9 @@ input {
 /*MOBILE*/
 @media (max-width: 40em){
 
-
 	/*PRODUCTS.HTML DIV*/
 	.multi-all{
-		margin-top:9em;
-		margin-left: 1em;
-		margin-right: 1em;
-	}
-
-	/*PRODUCTS.HTML DIV*/
-	.multi-all{
-		margin-top:9em;
+		margin-top:4em;
 		margin-left: 1em;
 		margin-right: 1em;
 	}
@@ -965,13 +994,13 @@ input {
 		width:100%;
 	}
 
-	#mobile-menu {
+	#category-menu {
 	  position: relative;
 	  width: 100%;
-	  /* height: 2em; */
+	  /*height: 2em; */
 	  cursor: pointer;
 	  display: block;
-	  margin: 2em auto 0 auto;
+	  margin: 1em auto 0 auto;
 	}
 
 	.item-box {
@@ -997,6 +1026,19 @@ input {
 	}
 
 	/*View item*/
+	.desktop{
+		display: none;
+	}
+
+	.mobile-title{
+		display: block;
+		position: relative;
+		margin: auto 15%;
+		margin-top: 2em;
+		width:70%;
+		float:left;
+		text-align: left;
+	}
 
 	.view-item img{
 		width:100%;
@@ -1030,9 +1072,6 @@ input {
 		width:100%;
 	}
 
-	#mobile-menu {
-
-	}
 	/*END OF PRODUCT NAVIGATION SECTION*/
 
 
@@ -1093,7 +1132,7 @@ input {
 	}
 
 	.item-heading {
-		width: 67%;
+		width: 70%;
 		padding-left: 0;
 		float: none;
 		text-align: left;
@@ -1101,9 +1140,9 @@ input {
 	}
 
 	.item-picture{
-		width: 64%;
+		width: 70%;
 		margin: 0px auto;
-		  min-width: 16em;
+		min-width: 16em;
 	}
 
 	.item-picture img{
@@ -1112,7 +1151,11 @@ input {
 
 	.item-header {
 		margin-top: auto;
-		width:100%;
+		width: 80%;
+		box-sizing: content-box;
+		margin: 1em 10%;
+		text-align: left;
+		position: absolute;
 	}
 
 	.item-description {
@@ -1126,7 +1169,7 @@ input {
 	}
 
 	.item-breadcrumbs{
-		margin-top: 7em;
+		margin-top: 2em;
 		margin-left: 2em;
 	}
 
@@ -1175,15 +1218,19 @@ input {
 		display: block;
 		width: 100%;
 		float: left;
-		margin-top: 6em;
+		margin-top: 1em;
 	}
 
 	.cart{
-  width: 100%;
-  min-width: 16em;
-  position: absolute;
-  top: 9em;
-  margin: 0 16%
+		width: 80%;
+		min-width: 16em;
+		position: relative;
+		top: 1em;
+		margin: 0 10%;
+	}
+
+	.cart-all{
+		position:relative;
 	}
 
 	.purchase-btn{
@@ -1198,9 +1245,5 @@ input {
 	.product-nav {
 		display:inline-block !important ;
 		/*Important tag Overwrites javascript inline-style for hidden menu*/
-	}
-
-	#mobile-menu {
-		display:none;
 	}
 	}
