--- a/css/product.css
+++ b/css/product.css
@@ -326,11 +326,13 @@ select:focus {
 }
 
 .item-breadcrumbs a{
-	margin: 0;
-	padding:0;
-	font-size: 0.70rem;
-	display: inline-block;
-  	float: left;
+  margin: 0;
+  padding: 0;
+  font-size: 0.70rem;
+  display: inline-block;
+   float: left; 
+  text-align: left;
+  height: 1em;
 }
 /*END OF VIEW ITEM BREADCRUMBS*/
 
@@ -348,8 +350,20 @@ select:focus {
 }
 
 /*VIEW ITEM SECTION*/
-.mobile-title{
+.title{
 	display:none;
+}
+
+.mobile-title .item-header {
+	font-family: PT Sans;
+	font-weight: 700;
+	width: 100%;
+	position: relative;
+	margin: auto;
+}
+
+.mobile-title .item-subheader {
+
 }
 
 .view-item{
@@ -488,12 +502,16 @@ font-family: Crimson Text;
 /*RECOMMENDATION SECTION*/
 .recommendations{
 	border-top: 1px solid #ccc;
-	padding-top: 3em;
+	padding-top: 2em;
 	display: block;
 	float: left;
 	width:100%;
-	height:25em;
+	margin-bottom: 5em;
 }
+
+.recommendations .small-header {
+	text-align:center;
+	}
 
 .recommendation-box{
 	display: inline;
@@ -511,6 +529,10 @@ font-family: Crimson Text;
 	vertical-align: top;
 }
 
+.recommend-item-box-last {
+	margin-right:0;
+}
+
 .recommend-item-box img{
 	width:100%;
 }
@@ -522,8 +544,8 @@ font-family: Crimson Text;
 .information-input{
   float: left;
   height: 50em;
-  width: 50%;
-  margin-left: 5%;
+  width: 45%;
+  margin:auto 5%;
   display: inline;
     position: relative;
   top: 4em;
@@ -531,7 +553,7 @@ font-family: Crimson Text;
 }
 
 .information-header{
-	  width: 100%;
+  width: 50%;
   position: relative;
   top: 2em;
   margin-left: 5%;
@@ -585,17 +607,17 @@ select:focus {
 
 
 .medium-input-label{
-	width: 55%;
+	width: 65%;
 }
 
 .small-input-label{
 	width: 25%;
-	margin-left: 1.5em;
+	margin-left: 0.5em;
 }
 
 .half-input-label{
-	width:32.5%;
-	margin-left: 1em
+	width:48%;
+	margin-left: 2%;
 }
 
 .country-input-label{
@@ -607,9 +629,9 @@ select:focus {
 	width:100%;
 }
 
-#input-detail{
+.input-detail{
 /*	margin-left: 6em;*/
-	width:85%;
+	width:100%;
 	margin-top: 0em;
 	margin-bottom: 1.5em;
 	float:left;
@@ -621,11 +643,11 @@ select:focus {
 	color: black; 
 }
 
-#medium-detail{
+.medium-detail{
 /*	margin-left: 6em;*/
 	margin-top: 0.25em;
 	margin-bottom: 1.5em;
-	width:55%;
+	width:65%;
 	display:inline;
 	float:left;
 	font-family: PT Sans;
@@ -635,13 +657,13 @@ select:focus {
 	padding: 0.8rem;
 }
 
-#small-detail{
-	margin-left: 0.5em;
+.small-detail{
+	margin-left: 1%;
 	margin-top: 0.25em;
 	margin-bottom: 1.5em;
-	width:27%;
+	width: 34%;
 	display: inline;
-	float:left;
+	float: left;
 	font-family: PT Sans;
 	text-transform: uppercase;
 	letter-spacing: 2px;
@@ -649,13 +671,13 @@ select:focus {
 	padding: 0.8rem;
 }
 
-#half-detail{
-	margin-left: 0.5em;
+.half-detail{
+	margin-left: 1%;
 	margin-top: 0.3em;
 	margin-bottom: 1.5em;
-	width:33.5%;
+	width: 49%;
 	display: block;
-	float:left;
+	float: left;
 	font-family: PT Sans;
 	text-transform: uppercase;
 	letter-spacing: 2px;
@@ -756,7 +778,6 @@ input {
   position: relative;
   top: 5em;
   width: 45%;
-  /* height: 50em; */
   margin-left: 0;
   display: block;
   float: right;
@@ -765,25 +786,18 @@ input {
 .cart-all{
 	display: inline-block;
 	float: left;
-	width: 70%;
-	/*min-width: 25em;*/
-	position: relative;
+	width: 80%;
+	position: absolute;
 	top:7em;
+	right: 10%;
 }
 
 .cart{
   float: right;
   width: 100%;
-  position: absolute;
-  /* top: 4em; */
-/*  right: 1em;*/
-  /* margin: 4em; */
-  /* margin-right: 6em; */
   display: block;
-  /* background-color: yellow; */
   padding: 5%;
-  /* border: 1px solid black; */
-  height: 20em;
+  min-height: 22em;
   box-shadow: 0 3px 5px 0 rgba(0,0,0,0.1);
   background-color: white;
 }
@@ -812,6 +826,8 @@ input {
 	display: inline-block;
 	position: relative;
 	width: 32%;
+	height: 4em;
+	float:left;
 }
 
 .cart-label {
@@ -830,7 +846,7 @@ input {
 }
 
 .purchase-btn{
-	width:87%;
+	width:100%;
 	float:left;
 	display: block;
 	position: relative;
@@ -843,8 +859,8 @@ input {
 	margin-top: 2rem;
 	display: block;
 	margin-bottom: 0.25rem;
-	width: 50%;
-	margin: 0rem 25% 0rem 25%;
+	width: 80%;
+	margin: 0 10%;
 }
 
 .review-item img{
@@ -858,21 +874,20 @@ input {
 @media (max-width: 50em){
 	.multi-list {
 	width: 68.5%;
-
 	}
 
-		.desktop{
-		display: none;
+	.desktop{
+	display: none;
 	}
 
 	.mobile-title{
-	  display: block;
-	  position: relative;
-	  margin: 2em 23%;
-	  width: 35%;
-	  float: left;
-	  text-align: left;
-	  min-width: 25em;
+		display: block;
+		position: relative;
+		margin: 2em 23%;
+		width: 45%;
+		float: left;
+		text-align: left;
+		/* min-width: 25em; */
 	}
 
 
@@ -910,17 +925,16 @@ input {
 	}
 
 	.item-picture{
-		width:35%;
-		text-align: center;	
-		float:none;
-		display: block;
-		margin:0 23%;
-		margin-top: 1.5em;
-
+	  width: 100%;
+	  text-align: center;
+	  float: none;
+	  display: block;
+	  margin: auto;
+	  margin-top: 1.5em;
 	}
 
 	.item-picture img{
-		width: 100%;
+		width: 55%;
 	}
 
 	.item-description{
@@ -929,31 +943,73 @@ input {
 
 	.review {
 		width:100%;	
-	  margin-bottom: 1em;	
+		margin-bottom: 3em;	
 	}
-		.cart{
+	.cart{
 		width: 80%;
-	  position: absolute;
-	  top: 3em;
-	  margin: 0 10%;
-	  height: auto;
-	  margin-bottom:2	em;
+		/*position: absolute;*/
+		top: 3em;
+		margin: 0 10%;
+		height: auto;
+		margin-bottom:2em;
+		float: left;
+		min-height: 21em;
 	}
 
 	.cart-all{
 		position: relative;
-		top: 2em;
+		top: 4em;
 		width:100%;
+		margin-bottom: 4em;
+		float:right;
+		right:0;
 	}
 
 	.information-input{
-		width: 90%;
-		top: 0em; 
-		margin: 3em 10%;
+		width: 80%;
+		top: 3em;
+		margin: auto 10%;
+		height:45em;
 	}
 
 	.information-header{
-		margin-left: 15%
+		margin-left: 10%;
+		position: absolute;
+		top: 1.75em;
+		width: 80%;
+	}
+
+	.medium-input-label{
+		width: 65%;
+	}
+
+	.input-detail {
+		width:99.5%;
+	}
+
+	.medium-detail {
+		width:65%;
+	}
+
+	.small-detail {
+		width:33%;
+	}
+
+	.half-detail {
+		width:49%;
+	}
+
+	.small-input-label {
+		width:33%;
+		margin-left:2%;
+	}
+
+	.item-breadcrumbs{
+		margin: 2em 10%;
+		width:80%;
+		float:left;
+		height:auto;
+		text-align:left;
 	}
 }
 
@@ -1034,7 +1090,6 @@ input {
 		display: block;
 		position: relative;
 		margin: auto 15%;
-		margin-top: 2em;
 		width:70%;
 		float:left;
 		text-align: left;
@@ -1150,28 +1205,23 @@ input {
 	}
 
 	.item-header {
-		margin-top: auto;
+/*		margin-top: auto;
 		width: 80%;
 		box-sizing: content-box;
 		margin: 1em 10%;
 		text-align: left;
-		position: absolute;
+		position: absolute;*/
 	}
 
 	.item-description {
 		width: 100%;
 		text-align: left;
-		margin-top: 1em;
+		margin-top: 0;
 	}
 
 	.item-price {
 		margin-bottom: 0.5em;
-	}
-
-	.item-breadcrumbs{
-		margin-top: 2em;
-		margin-left: 2em;
-	}
+	}	
 
 	.item-quantity {
 		width:100%;
@@ -1193,8 +1243,13 @@ input {
 	}
 
 	.recommendations{
-	height:35em;
-}
+		height:auto;
+		margin-bottom:2em;
+	}
+
+	.recommendations .small-header {
+	text-align:center;
+	}
 
 	/*footer*/
 	.footer {
@@ -1206,12 +1261,13 @@ input {
 	/*PURCHASE PRODUCT SECTION*/
 	.information{
 		width:100%;
-		position:relative;
+		position:inherit;
 		top:0;	
+		float:left;
 	}
 
 	.information-input{
-		display:inline-block;
+		height:40em;
 	}
 
 	.review{
@@ -1225,8 +1281,9 @@ input {
 		width: 80%;
 		min-width: 16em;
 		position: relative;
-		top: 1em;
+		top: 0;
 		margin: 0 10%;
+		min-height:22em;
 	}
 
 	.cart-all{
@@ -1235,10 +1292,11 @@ input {
 
 	.purchase-btn{
 		float:left;
-		width:89%;
-		margin-top: 3em;
+		width:100%;
+		margin: 1em auto;
 	}
 	/*PURCHASE PRODUCT SECTION*/
+	
 }
 
 @media (min-width: 40em){
